# LinuxCare-For-Gnome

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  build.rs  install.sh  uninstall.sh
.github/workflows/: release.yml
data/: linuxcare.desktop  resources.gresource.xml
scripts/: package-deb.sh  package-rpm.sh
src/: cli.rs  i18n.rs  main.rs  utils.rs
src/modules/: backup.rs  cleanup.rs  desktop.rs  disk.rs  driver.rs  firewall.rs  logview.rs  menu.rs  mod.rs  monitor.rs  network.rs  optimizer.rs  process.rs  service.rs  shortcut.rs  software.rs  startup.rs  system.rs  user.rs
