[package]
name = "linuxcare"
version = "0.1.0"
edition = "2021"
authors = ["Xinghe-0203", "刘畅"]
description = "A comprehensive Linux system management tool for GNOME desktop"
license = "MIT"

[dependencies]
gtk = { version = "0.9", package = "gtk4" }
adw = { version = "0.7", package = "libadwaita" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = "0.4"
glob = "0.3"
walkdir = "2.5"
trash = "3.1"
sysinfo = "0.31"
nix = { version = "0.29", features = ["user", "fs", "signal"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
regex = "1.10"

[build-dependencies]
glib-build-tools = "0.20"

[[bin]]
name = "linuxcare"
path = "src/main.rs"

[[bin]]
name = "linuxcare-cli"
path = "src/cli.rs"
